# rows_and_columns_rust

./: .gitignore
rows_and_columns/: Cargo.toml
rows_and_columns/src/: main.rs  rows_and_columns_module.rs
rows_and_columns_micro/: README.md  test.csv
rows_and_columns_module/: Cargo.toml  test.csv  test.csv_metadata.toml
rows_and_columns_module/src/: csv_processor_module.rs  error_types_module.rs  main.rs  notes.txt  rows_and_columns_module.rs
rows_columns_mini/: README.md  test_analysis_report_1757880650.toml
rows_columns_mini/src/: csv_processor_module.rs  error_types_module.rs  file_system_bridge_module.rs  manage_absolute_executable_directory_relative_paths.rs  rows_and_columns_module.rs
